# master-dissertation-2021

./: .gitignore  README.md  data-captured-recording.txt  data-captured.txt  launch.sh
icub-control/: ice_controller.cpp
icub_control/: CMakeLists.txt  ice_controller.cpp
logs/Parkinson OFF/: seed-1-stim-12.txt  seed-1-stim-14.txt  seed-1-stim-16.txt  seed-1-stim-18.txt  seed-1-stim-20.txt  seed-10-stim-12.txt  seed-10-stim-14.txt  seed-10-stim-16.txt  seed-10-stim-18.txt  seed-10-stim-20.txt  seed-2-stim-12.txt  seed-2-stim-14.txt  seed-2-stim-16.txt  seed-2-stim-18.txt  seed-2-stim-20.txt  seed-3--stim-14.txt  seed-3-stim-12.txt  seed-3-stim-16-.txt  seed-3-stim-18.txt  seed-3-stim-20.txt  seed-4-stim-12.txt  seed-4-stim-14.txt  seed-4-stim-16.txt  seed-4-stim-18.txt  seed-4-stim-20.txt  seed-5-stim-12.txt  seed-5-stim-14.txt  seed-5-stim-16.txt  seed-5-stim-18.txt  seed-5-stim-20.txt  seed-6-stim-12.txt  seed-6-stim-14.txt  seed-6-stim-16.txt  seed-6-stim-18.txt  seed-6-stim-20.txt  seed-7-stim-12.txt  seed-7-stim-14.txt  seed-7-stim-16.txt  seed-7-stim-18.txt  seed-7-stim-20.txt  (+10 more)
logs/Parkinson ON/: seed-1-stim-12.txt  seed-1-stim-14.txt  seed-1-stim-16.txt  seed-1-stim-18.txt  seed-1-stim-20.txt  seed-10-stim-12.txt  seed-10-stim-14.txt  seed-10-stim-16.txt  seed-10-stim-18.txt  seed-10-stim-20.txt  seed-2-stim-12.txt  (+39 more)
neuro-stabiliser/: SurrGradSpike.py  classifier-for-shd.py  neuro-stabilizer.py  neuro_stabiliser_utils.py  utils.py
rat-model/: CMakeLists.txt  main.py  network.py  package.xml
test_controller/: CMakeLists.txt  test_controller.cpp
(+39 files in other folders)
